Add unified notification system
This implements notification system inspired by seL4, with asynchronous
event delivery, notification masks, and IRQ fast-path optimization.
- Three-layer architecture: Basic/Async/Mask notifications
- IRQ fast-path delivery (5-10× faster than full IPC)
- Async queue with bounded RT processing
- Extended notification API with event_data payload
- Notification masks for multi-source event coordination
- TCB fields: notify_bits, notify_{data,pending,depth,generation}
- Softirq: ASYNC_SOFTIRQ for deferred notification delivery
- KDB: 'N' command for notification statistics
- IRQ subsystem: Dual delivery mode (IPC vs notification)

IRQ fast-path:
- IRQ_DELIVER_NOTIFY flag for notification-based delivery
- irq_handler_notify(): Fast-path handler (100-200 cycles target)
- IRQ encoding: 0-30 direct bit, 31+ uses bit 31 + event_data
- Safe thread lookup prevents use-after-free

Real-time properties:
- Bounded execution: NOTIFICATION_BATCH_SIZE = 4 events per softirq
- O(1) queue operations with atomic counter
- Memory barriers (DMB) for ordering guarantees
- WCET: 200 cycles for async delivery batch

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -62,10 +62,9 @@ jobs:
     - name: Enable test suite
       run: |
         # Enable test suite, disable conflicting apps
+        sed -i 's/^CONFIG_PINGPONG=y/# CONFIG_PINGPONG is not set/' .config
         echo "CONFIG_TESTS=y" >> .config
-        echo "# CONFIG_PINGPONG is not set" >> .config
-        echo "# CONFIG_L4_TEST is not set" >> .config
-        make oldconfig
+        python3 tools/kconfig/genconfig.py --header-path include/autoconf.h Kconfig
 
     - name: Build kernel with tests
       run: make
