Add POSIX PSE51/PSE52 compatibility layer
This implementation provides support for the IEEE Std 1003.13-2003 POSIX
real-time profiles on the F9 microkernel as an additional API layer for
application development.

PSE51 (Minimal Realtime System Profile):
- Threads: pthread_create/join/detach/exit/self/equal, cancellation
- Mutexes: normal/recursive/errorcheck with timedlock support
- Condition variables: wait/timedwait/signal/broadcast
- Semaphores: init/wait/trywait/post/getvalue/destroy
- Time: clock_gettime/nanosleep using L4_SystemClock
- Signals: per-thread state with sigmask/sigaction/sigwait

PSE52 (Realtime Controller) partial:
- Spinlocks: init/lock/trylock/unlock/destroy
- Read-write locks and barriers (stubs)

Implementation highlights:
- Notification-based blocking via L4_NotifyWait/Post/Clear
- UTCB-keyed cancel_table for thread cancellation state
- Thread lifecycle tracking (CREATED/RUNNING/EXITED)
- Proper timeout handling with TIMEOUT_BIT clearing
- Atomic sem_post overflow check to prevent TOCTOU race

Kernel changes:
- Add SYS_NOTIFY_CLEAR syscall for IRQ-safe bit clearing
- Fix race condition in sys_notify_post notification delivery

Close #98

--- a/user/Kconfig
+++ b/user/Kconfig
@@ -31,6 +31,21 @@ config USER_APP_PINGPONG
 	  Simple IPC demonstration with two threads exchanging messages.
 	  Useful for testing basic IPC functionality and as a minimal example.
 
+config USER_APP_POSIX
+	bool "POSIX Compliance Tests (PSE51 + PSE52 Partial)"
+	help
+	  PSE51 (POSIX Minimal Realtime System Profile) compliance test suite
+	  with PSE52 (Realtime Controller) extensions.
+
+	  Tests IEEE Std 1003.13-2003 compliance:
+	    - POSIX Threads: create, join, detach, attributes
+	    - Mutexes: lock, trylock, timedlock, recursive, deadlock detection
+	    - Condition variables: wait, timedwait, signal, broadcast
+	    - Semaphores: wait, trywait, post, getvalue
+	    - PSE52: Read-write locks, barriers
+
+	  See user/lib/posix/README.md for implementation details.
+
 config USER_APP_NONE
 	bool "No user application"
 	help
