--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,8 +43,20 @@ jobs:
 
   test:
     runs-on: ubuntu-24.04
-    needs: build
+    timeout-minutes: 15
+    strategy:
+      fail-fast: false
+      matrix:
+        app: [tests, posix]
+        include:
+          - app: tests
+            name: "Kernel Test Suite"
+            config: USER_APP_TESTS
+          - app: posix
+            name: "POSIX Compliance (PSE51+PSE52)"
+            config: USER_APP_POSIX
 
+    name: test (${{ matrix.app }})
     steps:
     - uses: actions/checkout@v6
 
@@ -56,25 +68,61 @@ jobs:
     - name: Install QEMU
       run: sudo apt-get update && sudo apt-get install -y qemu-system-arm
 
-    - name: Configure for netduinoplus2
-      run: make netduinoplus2_defconfig
-
-    - name: Enable test suite
+    - name: Configure for netduinoplus2 with ${{ matrix.name }}
       run: |
-        # Enable test suite, disable conflicting apps
-        sed -i 's/^CONFIG_PINGPONG=y/# CONFIG_PINGPONG is not set/' .config
-        echo "CONFIG_TESTS=y" >> .config
+        make netduinoplus2_defconfig
+        # Enable QEMU mode and selected test suite
+        python3 tools/kconfig/setconfig.py \
+          QEMU=y \
+          ${{ matrix.config }}=y
         python3 tools/kconfig/genconfig.py --header-path include/autoconf.h Kconfig
 
-    - name: Build kernel with tests
+    - name: Verify configuration
+      run: |
+        echo "=== Build Configuration ==="
+        grep -E "^CONFIG_(QEMU|USER_APP_|BOARD_)" .config | grep "=y"
+
+    - name: Build
       run: make
 
-    - name: Run test suite
+    - name: Run tests
       run: make run-tests
 
-    - name: Run MPU fault test (expected to fail on QEMU)
+    - name: Run MPU fault test
+      if: matrix.app == 'tests'
       run: make run-tests FAULT=mpu
-      continue-on-error: true
+      continue-on-error: true  # MPU not fully emulated in QEMU
 
     - name: Run stack canary fault test
+      if: matrix.app == 'tests'
       run: make run-tests FAULT=canary
+
+  compile-hw:
+    runs-on: ubuntu-24.04
+    strategy:
+      fail-fast: false
+      matrix:
+        app: [tests, posix]
+        include:
+          - app: tests
+            config: USER_APP_TESTS
+          - app: posix
+            config: USER_APP_POSIX
+
+    name: compile-hw (${{ matrix.app }})
+    steps:
+    - uses: actions/checkout@v6
+
+    - name: Install ARM toolchain
+      uses: carlosperate/arm-none-eabi-gcc-action@v1
+      with:
+        release: '15.2.Rel1'
+
+    - name: Configure for discoveryf4 (hardware target)
+      run: |
+        make discoveryf4_defconfig
+        python3 tools/kconfig/setconfig.py ${{ matrix.config }}=y
+        python3 tools/kconfig/genconfig.py --header-path include/autoconf.h Kconfig
+
+    - name: Build (compile-only, no QEMU)
+      run: make
